tol-qdrant-chart/qdrant-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdrant
  namespace: vector
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx  # adapte si besoin
  tls:
    - hosts:
        - qdrant.taxonlineai.com
      secretName: qdrant-tls
  rules:
    - host: qdrant.taxonlineai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qdrant
                port:
                  number: 6333
